<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "horizontal"
    tools:showIn="@layout/activity_main"
    android:weightSum="1"
    android:contentDescription="Menu principal: há quatro botões.">

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <TableRow
            style="@style/TableRow"
            android:background="@color/colorButton1"
            android:onClick="fullDescription">

            <ImageView
                style="@style/Image"
                android:src="@drawable/complete"
                android:contentDescription="@string/button_full_descriptor"/>

        </TableRow>

        <TableRow
            style="@style/TableRow"
            android:background="@color/colorButton2"
            android:onClick="labelDescription">

            <ImageView
                style="@style/Image"
                android:src="@drawable/label"
                android:contentDescription="@string/button_selection"/>

        </TableRow>

    </TableLayout>

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <TableRow
            style="@style/TableRow"
            android:background="@color/colorButton3"
            android:onClick="textDescription">

            <ImageView
                style="@style/Image"
                android:src="@drawable/text"
                android:contentDescription="@string/button_text_descriptor"/>

        </TableRow>

        <TableRow
            style="@style/TableRow"
            android:background="@color/colorButton4"
            android:onClick="detection">

            <ImageView
                style="@style/Image"
                android:src="@drawable/detector"
                android:contentDescription="@string/button_detector"/>

        </TableRow>
    </TableLayout>
</LinearLayout>